tests/baselines/reference/S7.8.5_A2.3_T3.errors.txt
S7.8.5_A2.3_T3.ts(32,1): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
S7.8.5_A2.3_T3.ts(32,2): error TS1161: Unterminated regular expression literal.
S7.8.5_A2.3_T3.ts(33,2): error TS1109: Expression expected.


==== S7.8.5_A2.3_T3.ts (3 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: sec-literals-regular-expression-literals
    info: |
      RegularExpressionChar ::
        RegularExpressionBackslashSequence
    
    
      RegularExpressionBackslashSequence ::
        \ RegularExpressionNonTerminator
    
      RegularExpressionNonTerminator ::
        SourceCharacter but not LineTerminator
    
      LineTerminator ::
        <LF>
        <CR>
        <LS>
        <PS>
    
    description: >
      A regular expression may not contain a <CR> as a SourceCharacter
    
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    /a
    ~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
     
!!! error TS1161: Unterminated regular expression literal.
    /
     
!!! error TS1109: Expression expected.
    